[microservices] IDEA-340279, enable URLs tab for relevant projects
It requires a creation of some SE contributors in the background

GitOrigin-RevId: 24c0ff39772fa33ee74eb66b8b8af12fee529ab6