@@ -80,12 +80,15 @@ public final class SearchEverywhereManagerImpl implements SearchEverywhereManage
 
     Project project = initEvent.getProject();
 
-    List<SearchEverywhereContributor<?>> contributors = createContributors(initEvent, project);
-    SearchEverywhereContributorValidationRule.updateContributorsMap(contributors);
+    var contributors = createContributors(initEvent, project);
+    List<SearchEverywhereContributor<?>> createdContributors = contributors.created();
+    SearchEverywhereContributorValidationRule.updateContributorsMap(createdContributors);
     SearchEverywhereSpellingCorrector spellingCorrector = SearchEverywhereSpellingCorrector.getInstance(project);
-    mySearchEverywhereUI = createView(myProject, contributors, spellingCorrector);
-    contributors.forEach(c -> Disposer.register(mySearchEverywhereUI, c));
+    SlowFactoryContributors slowFactoryContributors = SlowFactoryContributors.createInBackground(initEvent, contributors.slow());
+    mySearchEverywhereUI = createView(myProject, createdContributors, spellingCorrector, slowFactoryContributors);
+    createdContributors.forEach(c -> Disposer.register(mySearchEverywhereUI, c));
     mySearchEverywhereUI.switchToTab(tabID);
+    slowFactoryContributors.setParentDisposable(mySearchEverywhereUI);
 
     myHistoryIterator = myHistoryList.getIterator(tabID);
     //history could be suppressed by user for some reasons (creating promo video, conference demo etc.)
@@ -168,23 +171,30 @@ public final class SearchEverywhereManagerImpl implements SearchEverywhereManage
     return myProject != null ? WindowStateService.getInstance(myProject) : WindowStateService.getInstance();
   }
 
-  private static List<SearchEverywhereContributor<?>> createContributors(@NotNull AnActionEvent initEvent, Project project) {
+  private static Contributors createContributors(@NotNull AnActionEvent initEvent, Project project) {
     SearchEverywhereMlContributorReplacement.saveInitEvent(initEvent);
     if (project == null) {
       ActionSearchEverywhereContributor.Factory factory = new ActionSearchEverywhereContributor.Factory();
-      return Collections.singletonList(factory.createContributor(initEvent));
+      return new Contributors(Collections.singletonList(factory.createContributor(initEvent)), List.of());
     }
 
     List<SearchEverywhereContributor<?>> res = new ArrayList<>();
+    List<SearchEverywhereContributorFactory<?>> slowFactories = new ArrayList<>();
+
     for (SearchEverywhereContributorFactory<?> factory : SearchEverywhereContributor.EP_NAME.getExtensionList()) {
-      if (factory.isAvailable(project)) {
+      if (!(factory instanceof SearchEverywhereContributorSlowFactory) && factory.isAvailable(project)) {
         SearchEverywhereContributor<?> contributor = factory.createContributor(initEvent);
         res.add(contributor);
       }
+      else if (factory instanceof SearchEverywhereContributorSlowFactory) {
+        slowFactories.add(factory);
+      }
     }
 
-    return res;
+    return new Contributors(res, slowFactories);
   }
+
+  private record Contributors(List<SearchEverywhereContributor<?>> created, List<SearchEverywhereContributorFactory<?>> slow) {}
 
   private void calcPositionAndShow(@NotNull AnActionEvent initEvent,
                                    Project project,
@@ -270,11 +280,12 @@ public final class SearchEverywhereManagerImpl implements SearchEverywhereManage
   }
 
   private SearchEverywhereUI createView(Project project, List<SearchEverywhereContributor<?>> contributors,
-                                        @Nullable SearchEverywhereSpellingCorrector spellingCorrector) {
+                                        @Nullable SearchEverywhereSpellingCorrector spellingCorrector,
+                                        @NotNull SlowFactoryContributors slowFactoryContributors) {
     if (LightEdit.owns(project)) {
       contributors = ContainerUtil.filter(contributors, (contributor) -> contributor instanceof LightEditCompatible);
     }
-    SearchEverywhereUI view = new SearchEverywhereUI(project, contributors, myTabsShortcutsMap::get, spellingCorrector);
+    SearchEverywhereUI view = new SearchEverywhereUI(project, contributors, myTabsShortcutsMap::get, spellingCorrector, slowFactoryContributors);
 
     view.setSearchFinishedHandler(() -> {
       if (isShown()) {
